--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -130,7 +130,7 @@
     "c": "C",
     "outlined": "Outlined",
 
-    "sample-page": "Sample Page",
+    "portfolio": "Dashboard",
     "documentation": "Documentation",
     "roadmap": "Roadmap",
 
