removed google login

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -130,7 +130,7 @@
     "c": "C",
     "outlined": "Outlined",
 
-    "portfolio": "Dashboard",
+    "dashboard": "Dashboard",
     "documentation": "Documentation",
     "roadmap": "Roadmap",
 
